[gd_scene format=3 uid="uid://oltvrf01xrxl"]

[ext_resource type="Texture2D" uid="uid://c2h5snkvemm4p" path="res://assets/icons/Minus.svg" id="1_8ggy2"]
[ext_resource type="Script" uid="uid://dj2q7wnto3uqp" path="res://src/ui_widgets/zoom_widget.gd" id="1_18ab8"]
[ext_resource type="Texture2D" uid="uid://eif2ioi0mw17" path="res://assets/icons/Plus.svg" id="2_284x5"]
[ext_resource type="Script" uid="uid://ynx3s1jc6bwq" path="res://src/ui_widgets/BetterButton.gd" id="3_vgfv3"]

[node name="ZoomMenu" type="HBoxContainer" unique_id=470857541]
offset_right = 114.0
offset_bottom = 24.0
alignment = 1
script = ExtResource("1_18ab8")

[node name="ZoomOut" type="Button" parent="." unique_id=16157382]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("1_8ggy2")
icon_alignment = 1
script = ExtResource("3_vgfv3")
action = "zoom_out"

[node name="ZoomReset" type="Button" parent="." unique_id=609036226]
custom_minimum_size = Vector2(58, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "100%"
script = ExtResource("3_vgfv3")
action = "zoom_reset"

[node name="ZoomIn" type="Button" parent="." unique_id=530053836]
layout_mode = 2
mouse_default_cursor_shape = 2
theme_type_variation = &"IconButton"
icon = ExtResource("2_284x5")
icon_alignment = 1
script = ExtResource("3_vgfv3")
action = "zoom_in"
